# boltzeval

./: .gitignore  LICENSE  README.md  pyproject.toml
src/boltzeval/metrics/: energy_hist.py  ess.py  feature_transforms.py  hist_comparison.py  internal_coordinates.py  tica.py  torsion_marginals.py  vamp.py
src/boltzeval/pipeline/: __init__.py  energy_hist.py  eval.py
src/boltzeval/pipeline/nodes/: __init__.py  coord_marginal.py  energy_hist.py  internal_coord_marginal.py  sample_plot.py  tica_hist.py  tica_plot.py  vamp.py
src/boltzeval/utils/: conversion.py  hist_visualization.py  histogram.py  pdf.py  plot.py
tests/: test_histogram.py
